--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,5 +34,6 @@
 
     <string name="follow_summary_not_following">Not Following</string>
     <string name="follow_summary_following">Following</string>
+    <string name="get_current_token">Get current token</string>
 
 </resources>
